--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "lib/index.js",
   "scripts": {
+    "add-contributor": "kcd-scripts contributors add",
     "build": "kcd-scripts build",
+    "lint": "kcd-scripts lint",
     "test:unit": "kcd-scripts test --no-watch --config=jest.config.js",
     "test:testcafe:serve": "serve --listen 13370 ./test-app",
-    "test:testcafe:run": "testcafe",
+    "test:testcafe:run": "testcafe --skip-js-errors",
     "test:testcafe": "npm-run-all --silent --parallel --race test:testcafe:serve test:testcafe:run",
-    "test": "npm-run-all test:unit test:testcafe"
+    "test": "npm-run-all --parallel test:unit test:testcafe"
   },
   "keywords": [],
   "author": "",
