--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test:unit": "kcd-scripts test --no-watch --config=jest.config.js",
     "test:testcafe:serve": "serve --listen 13370 ./test-app",
     "test:testcafe:run": "testcafe --skip-js-errors",
+    "validate": "kcd-scripts validate build,test",
     "test:testcafe": "npm-run-all --silent --parallel --race test:testcafe:serve test:testcafe:run",
     "test": "npm-run-all --parallel test:unit test:testcafe"
   },
