--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,28 @@
-sudo: false
+dist: trusty
+sudo: required
+
+addons:
+  firefox: latest
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable fluxbox
+
+before_script:
+  - 'export DISPLAY=:99.0'
+  - 'sh -e /etc/init.d/xvfb start'
+  - sleep 3
+  - fluxbox >/dev/null 2>&1 &
 language: node_js
 cache:
   directories:
     - ~/.npm
 notifications:
   email: false
-node_js: "8"
+node_js: '8'
+before_install:
+  - stty cols 80
 install: npm install
 script: npm run validate
 after_success: kcd-scripts travis-after-success
