--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "testcafe-testing-library",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "description": "",
   "main": "lib/index.js",
   "scripts": {
@@ -12,7 +12,8 @@
     "test:testcafe:run": "testcafe --skip-js-errors",
     "validate": "kcd-scripts validate build,test",
     "test:testcafe": "npm-run-all --silent --parallel --race test:testcafe:serve test:testcafe:run",
-    "test": "npm-run-all --parallel test:unit test:testcafe"
+    "test": "npm-run-all --parallel test:unit test:testcafe",
+    "semantic-release": "semantic-release"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +26,11 @@
   "devDependencies": {
     "kcd-scripts": "^1.2.1",
     "npm-run-all": "^4.1.5",
-    "serve": "^10.1.2"
+    "serve": "^10.1.2",
+    "semantic-release": "^15.13.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/benmonro/testcafe-testing-library.git"
   }
 }
