--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,10 @@
 {
-    "plugins": [
-        "testcafe"
-    ],
-    "extends": [
-        "./node_modules/kcd-scripts/eslint.js",
-        "plugin:testcafe/recommended"
-    ]
+  "plugins": ["testcafe"],
+  "extends": [
+    "./node_modules/kcd-scripts/eslint.js",
+    "plugin:testcafe/recommended"
+  ],
+  "rules": {
+    "babel/new-cap": "off"
+  }
 }
