--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:unit": "kcd-scripts test --no-watch --config=jest.config.js",
     "test:testcafe:serve": "serve --listen 13370 ./test-app",
     "test:testcafe:run": "testcafe --skip-js-errors",
-    "validate": "kcd-scripts validate build,test",
+    "validate": "kcd-scripts validate build,lint,test",
     "test:testcafe": "npm-run-all --silent --parallel --race test:testcafe:serve test:testcafe:run",
     "test": "npm-run-all --parallel test:unit test:testcafe",
     "semantic-release": "semantic-release"
@@ -24,10 +24,12 @@
     "testcafe": "^1.1.2"
   },
   "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-plugin-testcafe": "^0.2.1",
     "kcd-scripts": "^1.2.1",
     "npm-run-all": "^4.1.5",
-    "serve": "^10.1.2",
-    "semantic-release": "^15.13.3"
+    "semantic-release": "^15.13.3",
+    "serve": "^11.0.0"
   },
   "repository": {
     "type": "git",
