feat: rename package (#21)
* updated to @testing-library/dom

* renamed package

BREAKING CHANGE: testcafe-testing-library is now `@testing-library/testcafe`

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "testcafe-testing-library",
+  "name": "@testing-library/testcafe",
   "version": "1.0.1-semantically-released",
   "description": "",
   "main": "dist/index.js",
@@ -23,7 +23,7 @@
   "license": "ISC",
   "dependencies": {
     "@babel/runtime": "^7.4.3",
-    "dom-testing-library": "^4.0.0",
+    "@testing-library/dom": "^5.0.1",
     "testcafe": "^1.1.2"
   },
   "devDependencies": {
