feat: add support for client scripts.  still using path to node_modules for now, but will add support for module syntax soon. BREAKING CHANGE: removed addTestcafeTestingLibrary

--- a/.testcaferc.json
+++ b/.testcaferc.json
@@ -1,4 +1,7 @@
 {
+  "clientScripts": [
+    "./node_modules/@testing-library/dom/dist/@testing-library/dom.umd.js"
+  ],
   "src": "tests/testcafe/**/*.js",
   "browsers": [
     "chrome:headless",
