--- a/.travis.yml
+++ b/.travis.yml
@@ -25,4 +25,6 @@ install: npm ci
 script: npm run validate
 after_success: npx semantic-release
 branches:
-  only: master
+  only: 
+  - master
+  - next
