--- a/package.json
+++ b/package.json
@@ -34,11 +34,17 @@
     "eslint-plugin-testcafe": "^0.2.1",
     "kcd-scripts": "^1.2.1",
     "npm-run-all": "^4.1.5",
-    "semantic-release": "^15.13.3",
+    "semantic-release": "^16.0.0-beta.22",
     "serve": "^11.0.0"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/testing-library/testcafe-testing-library.git"
+  },
+  "release": {
+    "branches": [
+      "master",
+      "next"
+    ]
   }
 }
