--- a/package.json
+++ b/package.json
@@ -26,19 +26,25 @@
   "license": "ISC",
   "dependencies": {
     "@babel/runtime": "^7.4.3",
-    "@testing-library/dom": "^5.0.1",
-    "testcafe": "^1.1.2"
+    "@testing-library/dom": "^6.1.0",
+    "testcafe": "^1.4.1"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
     "eslint-plugin-testcafe": "^0.2.1",
     "kcd-scripts": "^1.2.1",
     "npm-run-all": "^4.1.5",
-    "semantic-release": "^15.13.3",
+    "semantic-release": "^16.0.0-beta.22",
     "serve": "^11.0.0"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/testing-library/testcafe-testing-library.git"
+  },
+  "release": {
+    "branches": [
+      "master",
+      "next"
+    ]
   }
 }
