--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,9 @@ addons:
     sources:
       - google-chrome
     packages:
-      - google-chrome-stable fluxbox
+      - google-chrome-latest fluxbox
 before_install:
+  - stty cols 80
   - apt-get install gconf-service
 before_script:
   - export DISPLAY=:99.0
@@ -20,9 +21,7 @@ cache:
     - "~/.npm"
 notifications:
   email: false
-node_js: "8"
-before_install:
-  - stty cols 80
+node_js: "stable"
 install: npm ci
 script: npm run validate
 after_success: npx semantic-release
