--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,15 @@ addons:
       - google-chrome-beta fluxbox
 before_install:
   - stty cols 80
-  - apt-get install gconf-service
-before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq unzip chromium-browser
+  - sudo apt-get install libxss1
+  - sudo apt-get install libappindicator1
+  - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+  - sudo dpkg -i google-chrome*.deb
+  - sudo chmod u+s /opt
   - sleep 3
   - fluxbox >/dev/null 2>&1 &
 language: node_js
