--- a/.travis.yml
+++ b/.travis.yml
@@ -2,28 +2,25 @@ dist: trusty
 sudo: required
 addons:
   firefox: latest
-addons:
-  chrome: stable
-# before_install:
-#   - stty cols 80
-#   - export DISPLAY=:99.0
-#   - sh -e /etc/init.d/xvfb start
-#   - sudo apt-get update -qq
-#   - sudo apt-get install -qq unzip chromium-browser
-#   - sudo apt-get install libxss1
-#   - sudo apt-get install libappindicator1
-#   - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-#   - sudo dpkg -i google-chrome*.deb
-#   - sudo chmod u+s /opt
-#   - sleep 3
-#   - fluxbox >/dev/null 2>&1 &
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable fluxbox
+before_script:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+  - sleep 3
+  - fluxbox >/dev/null 2>&1 &
 language: node_js
+node_js: "stable"
+before_install:
+  - stty cols 80
 cache:
   directories:
     - "~/.npm"
 notifications:
   email: false
-node_js: "stable"
 install: npm ci
 script: npm run validate
 after_success: npx semantic-release
