--- a/.github/workflows/testcafe-testing-library.yml
+++ b/.github/workflows/testcafe-testing-library.yml
@@ -3,11 +3,11 @@ on: [push, pull_request]
 
 jobs:
   build:
-    name: 'Run Tests on OS: ${{ matrix.os }} node version: ${{ matrix.node }}'
+    name: '${{ matrix.os }} node ${{ matrix.node }}'
     runs-on: '${{ matrix.os }}'
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest]
         node: [10, 12]
     steps:
       - uses: actions/setup-node@v1
