--- a/.github/workflows/testcafe-testing-library.yml
+++ b/.github/workflows/testcafe-testing-library.yml
@@ -1,5 +1,5 @@
 name: End-to-End Tests
-on: [push, pull_request]
+on: [pull_request]
 
 jobs:
   build:
@@ -19,5 +19,4 @@ jobs:
       - name: Run TestCafe Tests
         uses: DevExpress/testcafe-action@latest
         with:
-          start: npm run test:testcafe:serve
           args: 'chrome tests/testcafe'
