--- a/.github/workflows/testcafe-testing-library.yml
+++ b/.github/workflows/testcafe-testing-library.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        node: [12]
+        node: [12, 10]
     steps:
       - uses: actions/setup-node@v1
         with:
@@ -23,6 +23,7 @@ jobs:
       - name: Run TestCafe Tests
         uses: DevExpress/testcafe-action@latest
         with:
+          version: 1.6
           args: 'chrome tests/testcafe'
       - run: npx semantic-release
         env:
