--- a/.github/workflows/testcafe-testing-library.yml
+++ b/.github/workflows/testcafe-testing-library.yml
@@ -24,7 +24,7 @@ jobs:
         uses: DevExpress/testcafe-action@latest
         with:
           version: 1.6
-          args: 'all tests/testcafe'
+          args: 'firefox tests/testcafe'
       - run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
