--- a/.github/workflows/testcafe-testing-library.yml
+++ b/.github/workflows/testcafe-testing-library.yml
@@ -13,6 +13,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         node: [12, 10]
+        browser: [chrome, firefox]
     steps:
       - uses: actions/setup-node@v1
         with:
@@ -24,7 +25,7 @@ jobs:
         uses: DevExpress/testcafe-action@latest
         with:
           version: 1.6
-          args: 'firefox tests/testcafe'
+          args: '${{ matrix.browser}} tests/testcafe'
       - run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
