--- a/.github/workflows/testcafe-testing-library.yml
+++ b/.github/workflows/testcafe-testing-library.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
 
 jobs:
-  build:
+  test:
     name: 'node ${{ matrix.node }} ${{matrix.browser}}  ${{ matrix.os }} '
     runs-on: '${{ matrix.os }}'
     strategy:
@@ -30,6 +30,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - run: npm run build
       - run: ls -asl dist
       - run: npx semantic-release
         env:
