--- a/.github/workflows/testcafe-testing-library.yml
+++ b/.github/workflows/testcafe-testing-library.yml
@@ -28,8 +28,9 @@ jobs:
           args: '${{ matrix.browser}} tests/testcafe'
   release:
     runs-on: ubuntu-latest
-    needs: build
+    needs: test
     steps:
+      - run: npm ci
       - run: npm run build
       - run: ls -asl dist
       - run: npx semantic-release
