--- a/.github/workflows/testcafe-testing-library.yml
+++ b/.github/workflows/testcafe-testing-library.yml
@@ -30,6 +30,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: test
     steps:
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 12
       - run: npm ci
       - run: npm run build
       - run: ls -asl dist
