--- a/.github/workflows/testcafe-testing-library.yml
+++ b/.github/workflows/testcafe-testing-library.yml
@@ -33,6 +33,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
+      - uses: actions/checkout@v1
       - run: npm ci
       - run: npm run build
       - run: ls -asl dist
