--- a/.github/workflows/testcafe-testing-library.yml
+++ b/.github/workflows/testcafe-testing-library.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
 
 jobs:
-  build:
+  test:
     name: 'node ${{ matrix.node }} ${{matrix.browser}}  ${{ matrix.os }} '
     runs-on: '${{ matrix.os }}'
     strategy:
@@ -26,6 +26,17 @@ jobs:
         with:
           version: 1.6
           args: '${{ matrix.browser}} tests/testcafe'
+  release:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 12
+      - uses: actions/checkout@v1
+      - run: npm ci
+      - run: npm run build
+      - run: ls -asl dist
       - run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
