--- a/package.json
+++ b/package.json
@@ -5,17 +5,13 @@
   "main": "dist/index.js",
   "typings": "typings",
   "scripts": {
-    "add-contributor": "kcd-scripts contributors add",
     "build": "kcd-scripts build",
     "lint": "kcd-scripts lint",
     "test:unit": "kcd-scripts test --no-watch --config=jest.config.js",
     "test:unit:monorepo": "cd tests/unit && kcd-scripts test --no-watch --config=../../jest.config.js",
-    "test:testcafe:serve": "serve --listen 13370 ./test-app",
-    "test:testcafe:run": "testcafe --skip-js-errors",
-    "validate": "kcd-scripts validate lint,test:unit",
-    "test:testcafe": "npm-run-all --silent --parallel --race test:testcafe:serve test:testcafe:run",
+    "test:testcafe": "testcafe --skip-js-errors",
+    "validate": "kcd-scripts validate lint,test:unit:monorepo",
     "test": "npm-run-all --parallel test:unit test:unit:monorepo test:testcafe",
-    "semantic-release": "semantic-release"
   },
   "files": [
     "dist",
@@ -34,8 +30,7 @@
     "eslint-plugin-testcafe": "^0.2.1",
     "kcd-scripts": "^5.0.0",
     "npm-run-all": "^4.1.5",
-    "semantic-release": "^16.0.0-beta.45",
-    "serve": "^11.0.0"
+    "semantic-release": "^16.0.0-beta.45"
   },
   "repository": {
     "type": "git",
