--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:unit:monorepo": "cd tests/unit && kcd-scripts test --no-watch --config=../../jest.config.js",
     "test:testcafe": "testcafe --skip-js-errors",
     "validate": "kcd-scripts validate lint,test:unit:monorepo",
-    "test": "npm-run-all --parallel test:unit test:unit:monorepo test:testcafe",
+    "test": "npm-run-all --parallel test:unit test:unit:monorepo test:testcafe"
   },
   "files": [
     "dist",
