--- a/.github/workflows/testcafe-testing-library.yml
+++ b/.github/workflows/testcafe-testing-library.yml
@@ -1,43 +1,21 @@
 name: testcafe-testing-library
-on:
-  push:
-    branches:
-      - 'master'
-  pull_request:
+on: [push]
 
 jobs:
-  test:
-    name: 'node ${{ matrix.node }} ${{matrix.browser}}  ${{ matrix.os }} '
+  build:
+    name: '${{ matrix.os }} node ${{ matrix.node }}'
     runs-on: '${{ matrix.os }}'
     strategy:
       matrix:
         os: [ubuntu-latest]
         node: [12, 10]
-        browser: [chrome, firefox]
     steps:
       - uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node }}
       - uses: actions/checkout@v1
       - run: npm ci
-      - run: npm run validate
       - name: Run TestCafe Tests
         uses: DevExpress/testcafe-action@latest
         with:
-          version: 1.6
-          args: '${{ matrix.browser}} tests/testcafe'
-  release:
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 12
-      - uses: actions/checkout@v1
-      - run: npm ci
-      - run: npm run build
-      - run: ls -asl dist
-      - run: npx semantic-release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          args: 'chrome tests/testcafe'
