--- a/.github/workflows/testcafe-testing-library.yml
+++ b/.github/workflows/testcafe-testing-library.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         node: [12, 10]
-        browser: [chrome, firefox]
+        browser: ["chrome:headless", "firefox:headless"]
     steps:
       - uses: actions/setup-node@v1
         with:
