fixup! remove prune

--- a/.github/workflows/testcafe-testing-library.yml
+++ b/.github/workflows/testcafe-testing-library.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - 'master'
+      - 'alpha'
   pull_request:
 
 jobs:
@@ -34,6 +35,7 @@ jobs:
           node-version: 12
       - uses: actions/checkout@v1
       - run: npm ci
+      - run: npm prune --production
       - run: npm run build
       - run: ls -asl dist
       - run: npx semantic-release
