--- a/package.json
+++ b/package.json
@@ -22,24 +22,21 @@
   "license": "ISC",
   "dependencies": {
     "@babel/runtime": "^7.4.3",
-    "@testing-library/dom": "^7.0.2",
-    "testcafe": "^1.5.0"
+    "@testing-library/dom": "^7.0.2"
+  },
+  "peerDependencies": {
+    "testcafe": ">= 1.5.0"
   },
   "devDependencies": {
     "eslint": "^6.5.1",
     "eslint-plugin-testcafe": "^0.2.1",
     "kcd-scripts": "^5.0.0",
     "npm-run-all": "^4.1.5",
-    "semantic-release": "^17.0.2"
+    "semantic-release": "^17.0.2",
+    "testcafe": "^1.8.4"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/testing-library/testcafe-testing-library.git"
-  },
-  "release": {
-    "branches": [
-      "master",
-      "next"
-    ]
   }
 }
