chore: changed client script to module

--- a/.testcaferc.json
+++ b/.testcaferc.json
@@ -1,6 +1,6 @@
 {
   "clientScripts": [
-    "./node_modules/@testing-library/dom/dist/@testing-library/dom.umd.js"
+    {"module":"@testing-library/dom/dist/@testing-library/dom.umd.js"}
   ],
   "src": "tests/testcafe/**/*.js",
   "browsers": [
