--- a/.github/workflows/testcafe-testing-library.yml
+++ b/.github/workflows/testcafe-testing-library.yml
@@ -13,8 +13,8 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        node: [12, 10]
-        browser: ["chrome:headless", "firefox:headless"]
+        node: [14, 12, 10]
+        browser: ['chrome:headless', 'firefox:headless']
     steps:
       - uses: actions/setup-node@v1
         with:
