--- a/.github/workflows/testcafe-testing-library.yml
+++ b/.github/workflows/testcafe-testing-library.yml
@@ -2,19 +2,19 @@ name: testcafe-testing-library
 on:
   push:
     branches:
-      - 'master'
-      - 'alpha'
+      - "master"
+      - "alpha"
   pull_request:
 
 jobs:
   test:
-    name: 'node ${{ matrix.node }} ${{matrix.browser}}  ${{ matrix.os }} '
-    runs-on: '${{ matrix.os }}'
+    name: "node ${{ matrix.node }} ${{matrix.browser}}  ${{ matrix.os }} "
+    runs-on: "${{ matrix.os }}"
     strategy:
       matrix:
         os: [ubuntu-latest]
         node: [14, 12, 10]
-        browser: ['chrome:headless', 'firefox:headless']
+        browser: ["chrome:headless", "firefox:headless"]
     steps:
       - uses: actions/setup-node@v1
         with:
@@ -25,7 +25,7 @@ jobs:
       - name: Run TestCafe Tests
         uses: DevExpress/testcafe-action@latest
         with:
-          args: '${{ matrix.browser}} tests/testcafe'
+          args: "${{ matrix.browser}} tests/testcafe"
   release:
     runs-on: ubuntu-latest
     needs: test
