--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test:unit": "kcd-scripts test --no-watch --config=jest.config.js",
     "test:unit:monorepo": "cd tests/unit && kcd-scripts test --no-watch --config=../../jest.config.js",
     "test:testcafe": "testcafe --skip-js-errors",
+    "prettier":"prettier .",
     "validate": "kcd-scripts validate lint,test:unit:monorepo",
     "test": "npm-run-all --parallel test:unit test:unit:monorepo test:testcafe"
   },
@@ -30,10 +31,11 @@
     "eslint-plugin-testcafe": "^0.2.1",
     "kcd-scripts": "^5.11.1",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.0.5",
     "semantic-release": "^17.0.7",
+    "testcafe": "^1.8.4",
     "ts-jest": "^25.4.0",
-    "typescript": "^3.8.3",
-    "testcafe": "^1.8.4"
+    "typescript": "^3.8.3"
   },
   "repository": {
     "type": "git",
