--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:unit": "kcd-scripts test --no-watch --config=jest.config.js",
     "test:unit:monorepo": "cd tests/unit && kcd-scripts test --no-watch --config=../../jest.config.js",
     "test:testcafe": "testcafe --skip-js-errors",
-    "prettier":"prettier .",
+    "prettier": "prettier .",
     "validate": "kcd-scripts validate lint,test:unit:monorepo",
     "test": "npm-run-all --parallel test:unit test:unit:monorepo test:testcafe"
   },
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-testcafe": "^0.2.1",
     "kcd-scripts": "^5.11.1",
     "npm-run-all": "^4.1.5",
