format check in CI

--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "test:unit": "kcd-scripts test --no-watch --config=jest.config.js",
     "test:unit:monorepo": "cd tests/unit && kcd-scripts test --no-watch --config=../../jest.config.js",
     "test:testcafe": "testcafe --skip-js-errors",
-    "prettier": "prettier .",
-    "validate": "kcd-scripts validate lint,test:unit:monorepo",
+    "format": "prettier . --write",
+    "format:check":"prettier . --check",
+    "validate": "kcd-scripts validate format:check,lint,test:unit:monorepo",
     "test": "npm-run-all --parallel test:unit test:unit:monorepo test:testcafe"
   },
   "files": [
