--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,11 @@
 {
-    "plugins": [
-        "testcafe"
-    ],
-    "extends": [
-        "./node_modules/kcd-scripts/eslint.js",
-        "plugin:testcafe/recommended",
-        "prettier"
-    ],
-    "rules": {
-        "babel/quotes": "off"
-    }
+  "plugins": ["testcafe"],
+  "extends": [
+    "./node_modules/kcd-scripts/eslint.js",
+    "plugin:testcafe/recommended",
+    "prettier"
+  ],
+  "rules": {
+    "babel/quotes": "off"
+  }
 }
