--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,10 @@
   "plugins": ["testcafe"],
   "extends": [
     "./node_modules/kcd-scripts/eslint.js",
-    "plugin:testcafe/recommended"
-  ]
+    "plugin:testcafe/recommended",
+    "prettier"
+  ],
+  "rules": {
+    "babel/quotes": "off"
+  }
 }
