--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,8 @@
 dist: trusty
 sudo: required
 addons:
+  chrome: stable
   firefox: latest
-  apt:
-    sources:
-      - google-chrome
-    packages:
-      - google-chrome-stable fluxbox
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
