fixed broken lint

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,8 @@
     "prettier"
   ],
   "rules": {
+    "testing-library/no-dom-import": "off",
+    "babel/new-cap": "off",
     "babel/quotes": "off"
   }
 }
