chore: rename default branch to main

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,6 @@ script: npm run validate
 after_success: npx semantic-release
 branches:
   only:
-    - master
+    - main
     - next
     - beta
