--- a/package.json
+++ b/package.json
@@ -42,5 +42,9 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/testing-library/testcafe-testing-library.git"
+  },
+  "engines": {
+    "node": ">=10",
+    "npm": ">=6"
   }
 }
