--- a/.github/workflows/testcafe-testing-library.yml
+++ b/.github/workflows/testcafe-testing-library.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        node: [10, 12, 14, 16]
+        node: [12, 14, 16]
         browser: ["chrome:headless", "firefox:headless"]
     steps:
       - uses: actions/setup-node@v3
