--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@testing-library/dom": "8.2.0"
+    "@testing-library/dom": "^8.13.0"
   },
   "peerDependencies": {
     "testcafe": ">= 1.5.0"
@@ -39,12 +39,15 @@
     "ts-jest": "^27.0.3",
     "typescript": "^4.0.2"
   },
+  "overrides": {
+    "typescript": "^4.0.2"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/testing-library/testcafe-testing-library.git"
   },
   "engines": {
     "node": ">=12",
-    "npm": ">=6"
+    "npm": ">=8.3"
   }
 }
