--- a/package.json
+++ b/package.json
@@ -22,22 +22,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@testing-library/dom": "^7.27.1"
+    "@testing-library/dom": "^8.19.0"
   },
   "peerDependencies": {
-    "testcafe": ">= 1.5.0"
+    "testcafe": ">=2.0.0"
   },
   "devDependencies": {
-    "eslint": "^8.13.0",
-    "eslint-config-prettier": "^8.1.0",
+    "eslint": "^8.26.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-testcafe": "^0.2.1",
-    "kcd-scripts": "^12.2.0",
+    "kcd-scripts": "^12.3.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.3.2",
-    "semantic-release": "^19.0.2",
-    "testcafe": "^1.8.4",
-    "ts-jest": "^27.0.3",
-    "typescript": "^4.0.2"
+    "prettier": "^2.7.1",
+    "semantic-release": "^19.0.5",
+    "testcafe": ">=2.0.0",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.8.4"
   },
   "repository": {
     "type": "git",
